# Newsletter

./: .gitignore  Cargo.toml  diesel.toml
migrations/2024-08-27-065149_create_subscriptions_table/: up.sql
migrations/2024-09-02-101741_set_status_confirmed/: up.sql
migrations/2024-09-10-100901_add_salt_to_users/: up.sql
migrations/2024-09-16-054950_seed_user/: up.sql
src/: authentication.rs  db.rs  db_models.rs  email_client.rs  lib.rs  main.rs  middleware.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter_tests.rs  subscriptions.rs  subscriptions_confirm.rs
