[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }
uuid = {version= "1.10.0", features=["v4", "serde"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.11"
unicode-segmentation = "1.11.0"
claim = "0.5.0"
validator = "0.13.0"
fake = "2.9.2"
rand_core = "0.6.4"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde_json = "1.0.127"
linkify = "0.10.0"
thiserror = "1.0.63"
anyhow = "1.0.86"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.1"
